--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h1 {
   height: 100vh;
   width: 100vw;
   transition: margin 0.5s ease-out;
-  background: linear-gradient(90deg, #29323c 0%, #485563 100%);
+  background: linear-gradient(90deg, #043772 0%, #485563 100%);
 }
 
 .screen.up {
